<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_HandleGetTM" Id="{7fe79f44-db81-4b13-93d2-126126fb875c}" SpecialFunc="None">
    <Declaration><![CDATA[(* alskjd *)
FUNCTION_BLOCK FB_HandleGetTM
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	//Initialize function block
	fbModbusReadTM : FB_ModbusReadTM;
	
	//variable to request status every 500ms;
	tiktak : TON;
	bRequestStatus : BOOL := FALSE;
	
	//address to be read from robot
	nMBAddr2	: WORD; //to read inputs 
	nMBAddr4	: WORD; //to read input registers 
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[


(*--------------- Request the robot status every cycle ---------------*)
nMBAddr2 := 16#1C21; //Modbus address to read error/not and project running/not 7201->7202
nMBAddr4 := 16#1B59; //Modbus address to read for "Cartesian coordinates w.r.t current Base without tool" & "Joints" 7001->7024
fbModbusReadTM(nMBAddr2 := nMBAddr2, nMBAddr4 := nMBAddr4);
(*--------------- END OF Request the robot status every cycle ---------------*)


(*--------------- Update the robot status ---------------*)
GVL_MobileManipulator.stRobotArmObjectTM.bBusyTM := fbModbusReadTM.bProjectRunning;
GVL_MobileManipulator.stRobotArmObjectTM.bErrorTM := fbModbusReadTM.bError;
GVL_MobileManipulator.stRobotArmObjectTM.fX := fbModbusReadTM.fX;
GVL_MobileManipulator.stRobotArmObjectTM.fY := fbModbusReadTM.fY;
GVL_MobileManipulator.stRobotArmObjectTM.fZ := fbModbusReadTM.fZ;
GVL_MobileManipulator.stRobotArmObjectTM.fRX := fbModbusReadTM.fRX;
GVL_MobileManipulator.stRobotArmObjectTM.fRY := fbModbusReadTM.fRY;
GVL_MobileManipulator.stRobotArmObjectTM.fRZ := fbModbusReadTM.fRZ;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta1 := fbModbusReadTM.fTheta1;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta2 := fbModbusReadTM.fTheta2;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta3 := fbModbusReadTM.fTheta3;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta4 := fbModbusReadTM.fTheta4;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta5 := fbModbusReadTM.fTheta5;
GVL_MobileManipulator.stRobotArmObjectTM.fTheta6 := fbModbusReadTM.fTheta6;
(*--------------- END OF Update the robot status ---------------*)


(*--------------- TO DO: Return the answer for class methods, external access---------------*)]]></ST>
    </Implementation>
    <LineIds Name="FB_HandleGetTM">
      <LineId Id="109" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="38" Count="4" />
      <LineId Id="120" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="66" Count="1" />
      <LineId Id="65" Count="0" />
      <LineId Id="69" Count="5" />
      <LineId Id="68" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="59" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>